--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Work Sans', sans-serif;
 }
 
 a {
