--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,8 @@ a {
 }
 
 .container{
-  max-width: 1150px;
+  width: max(70vw, 1150px);
+  max-width: 85vw;
 }
 
 .inputName {
@@ -39,22 +40,26 @@ a {
   background-image: url('/icons/checkIn.svg');
   background-repeat: no-repeat;
   background-position: 10px;
+  height: 33px;
 }
 .inputCheckOut{
   background-image: url('/icons/data.svg');
   background-repeat: no-repeat;
   background-position-x: -2px;
-  background-position-y: -2px;
+  background-position-y: -6px;
+  height: 33px;
 }
 .inputAdulto{
   background-image: url('/icons/person.svg');
   background-repeat: no-repeat;
   background-position: 12px;
+  height: 33px;
 }
 .inputCrianca{
   background-image: url('/icons/baby.svg');
   background-repeat: no-repeat;
   background-position: 12px;
+  height: 33px;
 }
 
 .gradient{
@@ -68,3 +73,17 @@ a {
   max-height: 300px;
   background-color: #004740d2;
 }
+
+.iconHeader{
+  width:32px
+}
+.iconPadLockHeader{
+  height: 32px
+
+}
+.liRegulation{
+  width: clamp(250px,20vw, 300px);
+}
+
+
+
