--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,9 @@ a {
 * {
   box-sizing: border-box;
 }
+.none{
+  display: none;
+}
 
 .container{
   width: max(70vw, 1150px);
@@ -85,6 +88,27 @@ a {
 .liRegulation{
   width: clamp(250px,20vw, 300px);
 }
-
+@keyframes sizeMenuBurguer{
+  from{
+    height: 0;
+    width: 200px;
+  }
+  to{
+    height: 200px;
+  }
+}
+.animationMenuBurguer{
+  animation: sizeMenuBurguer 1s forwards;
+}
+@keyframes nonee{
+  
+  to{
+    opacity: 1;
+  }
+}
+.itenMenuBurguer{
+  animation: nonee 1s forwards;
+  animation-delay: 0.5s;
+}
 
 
