--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,14 +19,15 @@ a {
 * {
   box-sizing: border-box;
 }
-.none{
+
+.none {
   display: none;
 }
 
-.container{
+.container {
   width: max(70vw, 1150px);
   max-width: 85vw;
-  
+
 }
 
 .inputName {
@@ -34,81 +35,97 @@ a {
   background-repeat: no-repeat;
   background-position: 12px;
 }
-.inpurEmail{
+
+.inpurEmail {
   background-image: url('/icons/email.svg');
   background-repeat: no-repeat;
   background-position: 10px;
-  
+
 }
-.inputCheckIn{
+
+.inputCheckIn {
   background-image: url('/icons/check.svg');
   background-repeat: no-repeat;
   background-position: 10px;
   height: 33px;
 }
-.inputCheckOut{
+
+.inputCheckOut {
   background-image: url('/icons/check.svg');
   background-repeat: no-repeat;
   background-position: 10px;
   height: 33px;
 }
-.inputAdulto{
+
+.inputAdulto {
   background-image: url('/icons/person.svg');
   background-repeat: no-repeat;
   background-position: 12px;
   height: 33px;
 }
-.inputCrianca{
+
+.inputCrianca {
   background-image: url('/icons/baby.svg');
   background-repeat: no-repeat;
   background-position: 12px;
   height: 33px;
 }
 
-
-.colorGradient{
+.colorGradient {
   background: linear-gradient(0deg, rgba(2, 1, 20, 0.874) 40%, rgba(3, 3, 37, 0.825) 81%, rgba(4, 7, 54, 0.766) 86%, rgba(10, 21, 66, 0.756) 100%)
 }
 
-.max-w-700{
+.max-w-700 {
   max-width: 700px;
 }
-.max-h-300{
+
+.max-h-300 {
   max-height: 300px;
   background-color: #004740d2;
 }
 
-.iconHeader{
-  width:32px
+.iconHeader {
+  width: 32px
 }
-.iconPadLockHeader{
+
+.iconPadLockHeader {
   height: 32px
+}
+
+.liRegulation {
+  width: clamp(250px, 40vw, 300px);
+}
+
+@media(max-width: 400px) {
+  .liRegulation {
+    width: clamp(200px, 40vw, 300px);
+  }
 
 }
-.liRegulation{
-  width: clamp(250px,20vw, 300px);
-}
-@keyframes sizeMenuBurguer{
-  from{
+
+@keyframes sizeMenuBurguer {
+  from {
     height: 0;
     width: 200px;
   }
-  to{
+
+  to {
     height: 200px;
   }
 }
-.animationMenuBurguer{
+
+.animationMenuBurguer {
   animation: sizeMenuBurguer 1s forwards;
 }
-@keyframes nonee{
-  
-  to{
+
+@keyframes nonee {
+
+  to {
     opacity: 1;
   }
 }
-.itenMenuBurguer{
+
+.itenMenuBurguer {
   animation: nonee 1s forwards;
   animation-delay: 0.5s;
 }
-
-
