--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,9 +25,14 @@ a {
 }
 
 .container {
-  width: max(70vw, 1150px);
-  max-width: 85vw;
+  width: min(80vw, 1150px);
+}
 
+@media(max-width: 600px) {
+  .container {
+    width: min(90vw, 1150px);
+    max-width: 1200px;
+  }
 }
 
 .inputName {
@@ -75,38 +80,21 @@ a {
   background: linear-gradient(0deg, rgba(2, 1, 20, 0.874) 40%, rgba(3, 3, 37, 0.825) 81%, rgba(4, 7, 54, 0.766) 86%, rgba(10, 21, 66, 0.756) 100%)
 }
 
-.max-w-700 {
-  max-width: 700px;
-}
-
-.max-h-300 {
-  max-height: 300px;
-  background-color: #004740d2;
-}
-
-.iconHeader {
-  width: 32px
-}
-
-.iconPadLockHeader {
-  height: 32px
-}
-
 .liRegulation {
-  width: clamp(250px, 40vw, 300px);
+  width: clamp(200px, 60vw, 300px);
 }
 
-@media(max-width: 400px) {
+@media(min-width: 600px) {
   .liRegulation {
-    width: clamp(200px, 40vw, 300px);
+    width: clamp(250px, 55vw, 300px);
   }
-
 }
 
 @keyframes sizeMenuBurguer {
   from {
     height: 0;
     width: 60vw;
+    max-width: 900px;
   }
 
   to {
@@ -118,14 +106,17 @@ a {
   animation: sizeMenuBurguer 1s forwards;
 }
 
-@keyframes nonee {
-
+@keyframes apper {
   to {
     opacity: 1;
   }
 }
 
 .itenMenuBurguer {
-  animation: nonee 1s forwards;
+  animation: apper 1s forwards;
   animation-delay: 0.5s;
+}
+
+.maxWidthItenMenuBurguer {
+  width: clamp(200px, 60vw, 900px);
 }
