--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -135,31 +135,33 @@ a {
 
 
 .footer {
-  height: 105vh;
-  max-height: 650px;
+  height: 110vh;
+  min-height: 700px;
 }
 .footerItem{
-  min-height: 350px;
+  display: inline;
 }
 
-@media(min-width: 500px) {
+@media(min-width: 400px) {
   .footer {
-    height: 96vh;
-  }
-  .footer .footerItem{
-    height: 96vh;
+    min-height: 650px;
   }
 }
 
 @media(min-width: 640px) {
   .footer {
     height: 99vh;
+    min-height: 350px;
+    
   }
-
+  .footerItem{
+    min-height: 350px;
+    min-height: 600px;
+  }
+  
 }
 @media(min-width: 768px) {
   .footerItem {
     min-height: 350px;
   }
-
 }
