--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,6 +46,14 @@ a {
   }
 }
 
+.inputFormulario{
+  min-width: 100%;
+  padding: 0 0 0 35px;
+  min-height: 40px;
+  border-radius: 6px;
+
+}
+
 .inputName {
   background-image: url('/icons/profile.svg');
   background-repeat: no-repeat;
