--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -175,6 +175,8 @@ a {
   --slider-transition-duration: 50ms !important;
   --organic-arrow-color: #ffffff !important;
   --content-background-color: #000 !important;
+  --control-bullet-color: #ffffff !important;
+  --control-bullet-active-color: #84ff7e !important;
 /*   --slider-height-percentage: 100% !important;
   --loader-bar-color: #851515 !important;
   --loader-bar-height: 6px !important;
