--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -165,25 +165,7 @@ a {
     min-height: 350px;
   }
 }
-
-/* ===== Style Slide ===== */
-.awssld{
-  --organic-arrow-thickness: 3px !important;
-  --organic-arrow-height: 30px !important;
-  --control-button-opacity: 1 !important;
-  --slider-transition-duration: 50ms !important;
-  --organic-arrow-color: #ffffff !important;
-  --content-background-color: #000 !important;
-  --control-bullet-color: #ffffff !important;
-  --control-bullet-active-color: #84ff7e !important;
-  --control-button-width: 10px !important;
-/*   --slider-height-percentage: 100% !important;
-  --loader-bar-color: #851515 !important;
-  --loader-bar-height: 6px !important;
-  --control-button-height: 10px !important;
-  --control-button-hover-opacity: 0.75 !important;
-  --control-button-background: transparent !important;
-  --transition-bezier: cubic-bezier(0.5, 0.075, 0.25, 0.95) !important;
-  --organic-arrow-border-radius: 100 !important; */
+.ReactModal__Overlay, .ReactModal__Overlay--after-open{
+  background-color: rgba(0, 0, 0, 0.687) !important;
 }
 
