--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -166,6 +166,6 @@ a {
   }
 }
 .ReactModal__Overlay, .ReactModal__Overlay--after-open{
-  background-color: rgba(0, 0, 0, 0.687) !important;
+  background-color: white !important;
 }
 
